--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ django-crispy-forms>=2.0
 crispy-bootstrap5>=2.0
 requests>=2.31.0
 markdown>=3.5
+
+gunicorn>=21.2.0
+psycopg2-binary>=2.9.9
+dj-database-url>=2.1.0
+whitenoise>=6.6.0
