fix: Agregar render.yaml y actualizar gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,12 @@ Thumbs.db
 # Migrations (optional, comentar si quieres subir migraciones)
 # */migrations/*.py
 # !*/migrations/__init__.py
+
+# Test and utility scripts
+test_db_connection.py
+check_tables.py
+db_backup.sqlite3
+
+# Deployment artifacts (optional, keep db_dump.json if needed for migration)
+# db_dump.json
+
