--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ django-crispy-forms>=2.0
 crispy-bootstrap5>=2.0
 requests>=2.31.0
 markdown>=3.5
+openpyxl>=3.1.0
+xhtml2pdf>=0.2.15
 
 gunicorn>=21.2.0
 psycopg2-binary>=2.9.9
